--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
 </html>
 <style>
   .box1 {
-    background-color: white;
+    background-color: black;
     border-radius: 25px;
     border: solid 1px black;
     height: 400px;
-    width: 30%;
+    width: 3000%;
     height: 50%;
+    background: #000;
     /* display: flex; */
     justify-content: center;
   }
