--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   .box1 {
     background-color: black;
     border-radius: 25px;
-    border: solid 1px black;
+    border: solid 1px blue;
     height: 400px;
     width: 3000%;
     height: 50%;
